# jarvis-fork

./: .gitignore  CMakeLists.txt  Makefile  TODO  config.ini  configHandler.py  currentSettings  init.lua  listenerSocket.py  main.py  mainExec  sources  test.py
STT_Handling/: Test.py  listenerSocket.py
audio_handling/: MISISTT.py  audioStart.py  configHandler.py  listener.py  listenerSocket.py  stt.py  threadSafeList.py
includes/: config.ini
landmina/: audio_logger.py  jarvis.code-workspace  listenerSocket.py  platformio.ini
landmina/src/: jarvis.code-workspace  main.cpp  testMain.cpp
llm/: llmAgent.py  systemMsgs.py
protocols/: settingsTracking.py
src/: globals.h  main.cpp  mainExec  makefile
src/audio/: ListenToESP.cpp  MISISTT.cpp  MISISTT.h  UDPHandler.cpp  audio.h  charsToWords.cpp  getBroadcast.cpp  sendKeepAlive.cpp
src/landmina/: .gitignore  audio_logger.py  platformio.ini
src/landmina/src/: main.cpp
src/libs/: installLibs.sh
src/openai/: agent.cpp  agent.h  mainExec
src/openai/tools/: callFunction.cpp  getTooldef.cpp  tools.h
src/utils/: Makefile  apiHandler.cpp  configHandler.cpp  configHandler.h  lightHandler.cpp  lightHandler.h  mailHandler.cpp  mailHandler.h  makefile  output  test.cpp  webUtils.cpp  webUtils.h  webUtilsCurlPost.cpp
src/utils/env/: envParser.cpp  envParser.h
src/utils/web/: curlPostTest  makefile_postTest  test.cpp  webUtils.h  webUtilsCurlPost.cpp
tools/: mail.py  setLights.py  toolDefinitions.py
